Closed
Bug 657696
Opened 14 years ago
Closed 14 years ago
Crash [@ nsMsgThread::GetRootHdr(int*, nsIMsgDBHdr**) ] and [@ nsMsgThread::GetRootHdr] (Mac)
Categories
(MailNews Core :: Database, defect)
Tracking
(thunderbird6+ fixed, thunderbird7+ fixed, seamonkey2.3 fixed, seamonkey2.4 fixed)
RESOLVED
FIXED
Thunderbird 8.0
People
(Reporter: xtc4uall, Assigned: Bienvenu)
References
()
Details
(Keywords: crash, topcrash, Whiteboard: [gs])
Crash Data
Attachments
(1 file)
|
802 bytes,
patch
|
standard8
:
review+
standard8
:
approval-comm-aurora+
|
Details | Diff | Splinter Review |
Had my Bugmail Folder (~300000 Mails, ~200 unread, set to show only unread ones) in one Tab and switched to an other Folder with Mail Items in the left Pane. The Targetfolder's Items were invisible since I set it to show only unread ones, too.
It *could* be that IMAP Fetching kicked in in the Moment of the Folder Switching and that the Folder's Msg Database got updated.
Totally not repro'able ;-).
Signature nsMsgThread::GetRootHdr(int*, nsIMsgDBHdr**)
UUID 402a0a9d-6aba-4334-b091-f2e782110517
Uptime 1.0 days
Last Crash 844740 seconds (1.4 weeks) before submission
Install Age 90652 seconds (1.0 days) since version was first installed.
Install Time 2011-05-16 16:13:52
Product Thunderbird
Version 3.3a4pre
Build ID 20110516000025
Release Channel nightly
Branch 2.0
OS Windows NT
OS Version 5.1.2600 Service Pack 3
CPU x86
CPU Info GenuineIntel family 15 model 3 stepping 4
Crash Reason EXCEPTION_ACCESS_VIOLATION_READ
Crash Address 0x0
User Comments switching Folder
Frame Module Signature Source
0 xul.dll nsMsgThread::GetRootHdr(int*,nsIMsgDBHdr**) mailnews/db/msgdb/src/nsMsgThread.cpp:1027
1 xul.dll nsMsgThreadedDBView::ListThreadIds(unsigned int*,int,unsigned int*,int*,char*,int,int*,int*) mailnews/base/src/nsMsgThreadedDBView.cpp:458
2 xul.dll nsMsgThreadedDBView::InitThreadedView(int*) mailnews/base/src/nsMsgThreadedDBView.cpp:150
3 xul.dll nsMsgQuickSearchDBView::Open(nsIMsgFolder*,int,int,int,int*) mailnews/base/src/nsMsgQuickSearchDBView.cpp:75
4 xul.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102
5 xul.dll XPCWrappedNative::CallMethod(XPCCallContext&,XPCWrappedNative::CallMode) js/src/xpconnect/src/xpcwrappednative.cpp:2369
6 xul.dll XPC_WN_CallMethod(JSContext*,unsigned int,unsigned __int64*) js/src/xpconnect/src/xpcwrappednativejsops.cpp:1610
7 mozjs.dll CallCompiler::generateNativeStub() js/src/methodjit/MonoIC.cpp:808
8 mozjs.dll js::mjit::ic::NativeCall(js::VMFrame&,js::mjit::ic::CallICInfo*) js/src/methodjit/MonoIC.cpp:1026
9 mozjs.dll js::mjit::EnterMethodJIT(JSContext*,JSStackFrame*,void*,js::Value*) js/src/methodjit/MethodJIT.cpp:683
10 mozjs.dll CheckStackAndEnterMethodJIT js/src/methodjit/MethodJIT.cpp:712
11 mozjs.dll js::mjit::JaegerShot(JSContext*) js/src/methodjit/MethodJIT.cpp:729
12 mozjs.dll js::RunScript(JSContext*,JSScript*,JSStackFrame*) js/src/jsinterp.cpp:633
13 mozjs.dll js::Invoke(JSContext*,js::CallArgs const&,unsigned int) js/src/jsinterp.cpp:716
14 mozjs.dll js::ExternalInvoke(JSContext*,js::Value const&,js::Value const&,unsigned int,js::Value*,js::Value*) js/src/jsinterp.cpp:839
15 mozjs.dll JS_CallFunctionValue js/src/jsapi.cpp:5153
16 xul.dll nsXPCWrappedJSClass::CallMethod(nsXPCWrappedJS*,unsigned short,XPTMethodDescriptor const*,nsXPTCMiniVariant*) js/src/xpconnect/src/xpcwrappedjsclass.cpp:1667
17 xul.dll nsXPCWrappedJS::CallMethod(unsigned short,XPTMethodDescriptor const*,nsXPTCMiniVariant*) js/src/xpconnect/src/xpcwrappedjs.cpp:586
18 xul.dll PrepareAndDispatch xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp:114
19 xul.dll SharedStub xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp:141
20 xul.dll nsMsgMailSession::OnItemEvent(nsIMsgFolder*,nsIAtom*) mailnews/base/src/nsMsgMailSession.cpp:208
Modified Prefs (minus Printer):
dom.max_chrome_script_run_time: 0
dom.report_all_js_exceptions: true
extensions.checkCompatibility.3.3a: false
extensions.lastAppVersion: 3.3a4pre
javascript.options.jitprofiling.chrome: true
javascript.options.methodjit.chrome: true
javascript.options.strict: true
layers.acceleration.force-enabled: true
mail.openMessageBehavior.version: 1
network.cookie.lifetimePolicy: 2
network.cookie.prefsMigrated: true
places.database.lastMaintenance: 1305521817
places.history.expiration.transient_current_max_pages: 64408
privacy.donottrackheader.enabled: true
Exts:
Console², 0.7.1, true, {1280606b-2510-4fe0-97ef-9b5a22eafe80}
Deutsches Wörterbuch, 2.0.2, true, de-DE@dictionaries.addons.mozilla.org
Nightly Tester Tools, 3.1.6, true, {8620c15f-30dc-4dba-a131-7c5d20cf4a29}
United States English Spellchecker, 5.0.1, true, en-US@dictionaries.addons.mozilla.org
ViewAbout, 2.0.1, true, viewabout@rumblingedge.com
ConfigDate, 0.7, false, {782E3D25-61FD-4997-AA8F-D3F18FA92ECC}
ImportExportTools (Mboximport enhanced), 2.5.1, false, {3ed8cc52-86fc-4613-9026-c1ef969da4c3}
Manually Sort Folders, 0.6.6, false, tbsortfolders@xulforum.org
Update Channel Selector, 1.5, false, updatechannel@blueprintit.co.uk
Comment 1•14 years ago
|
||
critical :)
bp-402a0a9d-6aba-4334-b091-f2e782110517 signature is pdr (pretty dang rare). 12 crashes in 4 months, across all 3.0 and 3.1 releases.
perhaps this is the same crash as nsMsgThreadedDBView::ListThreadIds(unsigned int*, int, unsigned int*, int*, char*, int, int*, int*)
bp-6d6407b4-5473-4ca8-9fe7-6b8e32110422
Severity: normal → critical
Updated•14 years ago
|
Crash Signature: [@ nsMsgThread::GetRootHdr(int*, nsIMsgDBHdr**) ]
Comment 2•14 years ago
|
||
looks like a strong uptick in crashes compared to version 3.x. mostly startup crashes.
#4 crash so far for Thunderbird 5.0, but at least half the people submitted >1 crash. But cutting the count by 1/4 still puts it in top 10, so topcrash
Keywords: topcrash
| Assignee | ||
Comment 3•14 years ago
|
||
I believe wsmwk said that this stack trace is now the top mailnews-code-related crash (and #4 overall). This null check should fix that. I'd like to get this in for 6 and 7, if possible.
| Assignee | ||
Comment 4•14 years ago
|
||
getting on tb 6 and 7 radar. The increase in crashes was a regression in tb 5
tracking-thunderbird6:
--- → ?
tracking-thunderbird7:
--- → ?
Comment 5•14 years ago
|
||
yeah, we should try to get this for v5. Marginally #3 crash, if you include the Mac crash signature "nsMsgThread::GetRootHdr"
Mac crash bp-53403390-9dca-4f4b-8445-5f5c12110608 reporter sez "On top of it [the crash], the date is configured to read 66//11 for mails of 6 June 2011 (for example) in the entire Thunderbird. Currently, I have stopped using it. I have switched to the Mail system under MAC."
Crash Signature: [@ nsMsgThread::GetRootHdr(int*, nsIMsgDBHdr**) ] → [@ nsMsgThread::GetRootHdr(int*, nsIMsgDBHdr**) ]
[@ nsMsgThread::GetRootHdr ]
OS: Windows XP → All
Summary: Crash [@ nsMsgThread::GetRootHdr(int*, nsIMsgDBHdr**) ] → Crash [@ nsMsgThread::GetRootHdr(int*, nsIMsgDBHdr**) ] and [@ nsMsgThread::GetRootHdr] (Mac)
Updated•14 years ago
|
Attachment #543939 -
Flags: review?(mbanner)
Attachment #543939 -
Flags: review+
Attachment #543939 -
Flags: approval-comm-beta+
Attachment #543939 -
Flags: approval-comm-aurora+
| Assignee | ||
Comment 6•14 years ago
|
||
| Assignee | ||
Updated•14 years ago
|
Target Milestone: --- → Thunderbird 8.0
| Assignee | ||
Updated•14 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 7•14 years ago
|
||
https://hg.mozilla.org/releases/comm-aurora/rev/a0b96b0f6a6f
https://hg.mozilla.org/releases/comm-beta/rev/89a759cf4de4
status-thunderbird6:
--- → fixed
status-thunderbird7:
--- → fixed
Updated•14 years ago
|
Whiteboard: [gs]
Updated•14 years ago
|
Updated•14 years ago
|
status-seamonkey2.3:
--- → fixed
status-seamonkey2.4:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•