fix bug 657696, crash in nsMsgThread::GetRootHdr, r=standard8